# projects

./: .gitignore  README.md  README.txt  configure
in/lattice/: 18_BA_1.lat  18_BA_2.lat  19_BA.lat  19_BA_1.lat  19_BA_2.lat  m4-20121107-430-bare.lat
src/: Makefile.am  basic.cc  dnu.cc  dnu.sh  dnu_plt.sh  dynap.cc  dynap.sh  fft_sls.plt  fmap.sh  fmap_plt.sh  get_dynap.sh  ibs.cc  ibs.plt  leac.cc  main_sum.cc  max_iv_1.cc  max_iv_2.cc  optics  optics.cc  tbt.cc  tbt.sh  touschek.cc  vlad.cc
src/ptc/: Makefile.am  fmap.cc  get_dnu.cc  vlad.cc
src/python/: tbt.py
